tests/NormalTests/paczka1/fuzzy1/72319993.err
Error in line 4: UtAVjHV7 A316 14,44
Error in line 21: VrWpJyvR A316 60,9
Error in line 23: H2FUiqpxhLX A316 95,1
Error in line 28: VrWpJyvR A154 63,8
Error in line 29: H2FUiqpxhLX S653 18,4
Error in line 30: VrWpJyvR S653 79,5
Error in line 32: VrWpJyvR A154 1,4
Error in line 38: H7m4kkyi8WI S504 42,90
